--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,16 @@ on:
     branches: [ master ]
   workflow_dispatch:
 
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
