--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,38 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  get_urls:
+    name: Get source code urls
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: generate list.txt
+        run: |
+          pip install -r requirements.txt
+          python generate.py
+      - name: Upload list.txt
+        uses: actions/upload-artifact@v3
+        with:
+          name: list.txt
+          path: list.txt
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: get_urls
     permissions:
       packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Download list.txt
+        uses: actions/download-artifact@v3
+        with:
+          name: list.txt
       - name: Cache source
         uses: actions/cache@v2
         with:
@@ -33,9 +57,8 @@ jobs:
           sudo apt-get install aria2 --no-install-recommends
       - name: Download source
         run: |
-          aria2c -x16 -s16 -i list.txt -c
+          aria2c -x16 -s16 -i list.txt -d cache -c
           mkdir output
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
